@@ -2,6 +2,9 @@
 
     * Added support for a few xterm character attributes.
     
+    * Tabs are dragged only after about 8 pixels to prevent 
+      accidental dragging.
+    
 
 2003-02-16	Ujwal S. Sathyam <ujwal@setlurgroup.com>
 
